# tranci

./: .gitignore  README.md  generate_styles.py  pyproject.toml  setup.py
.github/workflows/: python-publish.yml
tests/: README.md  test_tranci.py
tranci/: __init__.py  __main__.py
