[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tranci"
dynamic = ["version"]
description = "Tranci: a no-dependencies, lightweight, easy-to-use ANSI library"
readme = "README.md"
requires-python = ">=3.10"
license = "LGPL-3.0-or-later"
authors = [
    {name = "Butterroach", email = "butterroach@outlook.com"}
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python :: 3",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
]

[project.urls]
Source = "https://github.com/Butterroach/tranci"
"Bug Tracker" = "https://github.com/Butterroach/tranci/issues"

[tool.setuptools.dynamic]
version = {attr = "tranci.__version__"}

[tool.setuptools.package-data]
tranci = ["py.typed"]
